<resources>
    <string name="app_name">OneFarm</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">OneFarm</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="signUpQuestion">Don\'t have an account?</string>
    <string name="title">Farmer Market Online Platform</string>
    <string name="title_activity_market">market</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Logout</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_profile">profile</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="complaint_type">Choose a category</string>

    <string-array name="complaint_arrays">
        <item>Vegetable</item>
        <item>Fruit</item>
        <item>Livestock</item>
        <item>Biomed</item>
        <item>Seafood</item>
        <item>Commodity</item>

    </string-array>
</resources>
